force-app/main/default/objects/Discount_Approval_Tier__mdt/Discount_Approval_Tier__mdt.object-meta.xml
<CustomObject>
    <description>Defines discount percentage tiers and their required approval levels. Used by DiscountTierSelector to route requests to the correct approver queue.</description>
    <label>Discount Approval Tier</label>
    <pluralLabel>Discount Approval Tiers</pluralLabel>
</CustomObject>