force-app/main/default/objects/Discount_Approval_Tier__mdt/fields/Approver_Level__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level__c</fullName>
    <description>Human-readable approver level label stored as a snapshot on the request at creation time (e.g. Sales Manager, Director, CFO).</description>
    <label>Approver Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>