force-app/main/default/objects/Discount_Approval_Tier__mdt/fields/Auto_Approve__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve__c</fullName>
    <description>When true, requests falling in this tier are automatically approved without human review.</description>
    <defaultValue>false</defaultValue>
    <label>Auto Approve</label>
    <type>Checkbox</type>
</CustomField>