force-app/main/default/objects/Discount_Approval_Tier__mdt/fields/Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount__c</fullName>
    <description>Maximum discount percentage (inclusive) for this tier.</description>
    <label>Max Discount (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>