force-app/main/default/objects/Discount_Approval_Tier__mdt/fields/Queue_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Queue_DeveloperName__c</fullName>
    <description>DeveloperName of the Queue to route this request to. Used by DiscountTierSelector to resolve the Queue Id at runtime.</description>
    <label>Queue Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>